--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "build:test": "./deploy.sh --env test"
   },
   "dependencies": {
     "@supabase/ssr": "latest",
