--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "build:test": "./deploy.sh --env test"
+    "start": "next start"
   },
   "dependencies": {
+    "@paddle/paddle-js": "^1.0.3",
+    "@paddle/paddle-node-sdk": "^1.3.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
+    "axios": "^1.6.8",
     "geist": "^1.2.1",
     "next": "latest",
+    "paddle-sdk": "^4.6.2",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
